Update and rename mgs-codename-gen_1.0.4.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shotgun Impala's MGS Codename Generator</title>
+  <title>Shotgun Impala's MGS Codename Generator v1.0.4</title>
   <meta charset="UTF-8">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
