--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                 
             }
         }
+        @media screen and (min-width: 900px) {
+            ul li {
+                font-size: 1.5em;
+                width: 100%;
+            }
+            #title {
+                margin: 0%;
+                text-align: left;
+                font-size:3em;
+                
+            }
+        }
     </style>
 </head>
 <body>
