--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <h1 id="title">messing </br>around</h1>
         <ul>
             <li><a href="codenames/index.html" target="_blank">Codename Generator</a></li>
+            <li><a href="idc.html" target="_blank">Image Dimension Calculator</a></li>
             <li><a href="https://octu8re.github.io/myLittleGalaxy" target="_blank">myLittleGalaxy</a></li>
             <li><a href="https://cvelez.pythonanywhere.com" target="_blank">FIGlet Art Generator</a></li>
             <!-- Add more list items as needed -->
