--- a/idc.html
+++ b/idc.html
@@ -75,6 +75,10 @@ function calculateMissingDimension() {
 <body>
 
 <h2>Calculadora de Dimensiones de Imagen</h2>
+    
+<div id="aspectRatioDisplay" style="border: 2px solid #FFFFFF; margin-top: 20px;"></div>
+
+<p id="result"></p>
 
 <label for="dimension">Dimensión conocida:</label>
 <select id="dimension">
