--- a/idc.html
+++ b/idc.html
@@ -111,6 +111,12 @@
 <body>
 
 <h1>Calculadora de Dimensiones de Imagen 2.2.0</h1>
+<article>
+    Proyectito de práctica para calcular dimensiones de imagen para la creación de contenido audiovisual.
+    <p>Comienza escogiendo la dimensión conocida, el <B>ancho</B> o <b>alto</b>, seguido por el valor de la dimensión (en píxeles). 
+    Luego selecciona la <b>relación de aspecto</b> o <b>tasa dimensional</b> deseada y finalmente escoge la orientación de la imagen, si <b>portrait</b> o <b>landscape</b>.
+    </p>
+</article>
 
 <div id="aspectRatioDisplay"></div>
 <p id="result"></p>
