--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ footer {
         <li><a href="codenames/index.html" target="_blank">MGS Codename Generator</a></li>
         <li><a href="idc.html" target="_blank">Image Dimension Calculator</a></li>
         <li><a href="https://octu8re.github.io/myLittleGalaxy" target="_blank">myLittleGalaxy</a></li>
+        <li><a href="https://octu8re.github.io/mofongodrops.html" target="_blank">Mofongo Drops</a></li>
         <li><a href="https://cvelez.pythonanywhere.com" target="_blank">FIGlet Art Generator</a></li>
         <!-- Add more list items as needed -->
     </ul>
