--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ footer {
 </head>
 <body>
     <header>
-        <h1>octu8re.github.io</h1>
+        <h1>octu8re.github.io/messing-around</h1>
       <!--  <nav>
             <a href="#">Inicio</a>
             <a href="#">Sobre Mí</a>
